@@ -1,5 +1,5 @@
 // emacs edit mode for this file is -*- C++ -*-
-// $Id: fglmzero.cc,v 1.3 1997-03-27 16:11:10 Singular Exp $
+// $Id: fglmzero.cc,v 1.4 1997-03-27 20:23:38 obachman Exp $
 
 /****************************************
 *  Computer Algebra System SINGULAR     *
@@ -18,6 +18,8 @@
 #include <iostream.h>
 #endif
 #include "mod2.h"
+
+#ifdef HAVE_FGLM
 #include "tok.h"
 #include "structs.h"
 #include "polys.h"
@@ -980,6 +982,8 @@ fglmzero( idhdl sourceRingHdl, ideal & sourceIdeal, idhdl destRingHdl, ideal & d
 	rSetHdl( initialRingHdl, TRUE );
     return fglmok;
 }
+
+#endif
 
 // ----------------------------------------------------------------------------
 // Local Variables: ***
